# sql-artifacts

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.config/python/: startup.py
.github/workflows/: ci-seed.yaml  pg-test-runner.yaml  smoke-db.yaml  test_course_01_creating_postgres_db.yaml  test_course_02_intermediate_sql.yaml
src/sql_artifacts/: data_loader.py  db_client.py  logger.py  prepare_csv.py
src/sql_artifacts/course_01_creating_postgresql_db/: main.py  postgres_db_structure.py
src/sql_artifacts/course_02_intermediate_sql/: fixture_builder.py
tests/: test_connection.py
tests/course_01_creating_postgresql_db/: test_full_course_workflow.py  test_integration_main.py  test_unit_main.py
tests/course_02_intermediate_sql/: test_fixture_films.py  test_fixture_people.py  test_fixture_reviews.py  test_fixture_roles.py
tests/unit/: test_connection.py  test_db_client.py
